# npm-threat-observatory

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  config.py  db.py  deps.py  main.py  models.py  sample_catalog.py  schemas.py  security.py  verdicts.py  worker.py
app/services/: analysis_service.py  docker_runner.py  event_service.py  upload_service.py
app/static/: app.js  index.html  styles.css
docker/: analyzer.Dockerfile  control-api.Dockerfile  worker.Dockerfile
falco/rules/: npm_rules.yaml
samples/benign/: index.js  package.json
samples/malicious-postinstall/: package.json
samples/malicious-runtime/: index.js  package.json
scripts/: daily-reset.sh  install.sh  portable-common.sh  portable-hook.js  portable-wrapper.sh  portable_emit.py  portable_netguard.py  runtime.sh
tests/: test_analysis_service.py  test_event_ingest.py  test_portable_ingest.py  test_samples.py  test_security.py  test_upload_service.py  test_verdicts.py
